# hello-rust-wasm

./: Cargo.toml  README.md  build.sh  rust-toolchain.toml
native-executor/: Cargo.toml
native-executor/src/: main.rs  utils.rs
wasm-runtime/: Cargo.toml
wasm-runtime/src/: lib.rs
wasm-types/: Cargo.toml
wasm-types/src/: bounded_str.rs  lib.rs  sender.rs  tiny_str.rs
