[workspace.package]
authors = ["Lohann Paterno Coutinho Ferreira <developer@lohann.dev>"]
edition = "2021"
repository = "https://github.com/curso-polkadot-sdk/hello-rust-wasm.git"

[workspace]
members = ["native-executor", "wasm-runtime", "wasm-types"]
resolver = "2"

[workspace.dependencies]
wasm-types = { path = "./wasm-types", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
debug-assertions = false
incremental = false
