[package]
name = "wasm-runtime"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "WASM runtime code"

[lib]
name = "wasm_runtime"
crate-type = ["cdylib"]

## Uncomment the following lines to enable the `rand` only in non-wasm32 targets
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rand = { version = "0.8.4" }
