[package]
name = "wasm-runtime"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "WASM runtime code"

[lib]
name = "wasm_runtime"
crate-type = ["cdylib"]

[dependencies]
dlmalloc = { version = "0.2.11", features = ["global"] }
tinyvec = { version = "1.10.0", features = ["alloc"] }
wasm-types = { workspace = true }
parity-scale-codec = { workspace = true }
const-hex = { version = "1.17.0", default-features = false, features = ["alloc"]}

## Uncomment the following lines to enable the `rand` only in non-wasm32 targets
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rand = { version = "0.8.4" }

[features]
default = []
std = ["wasm-types/std"]
